# cronus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig
.github/workflows/: build.yaml  ci.yaml
backend/service/: handlers.go
components/cronus_cfg/: CMakeLists.txt  cronus_cfg.c
components/cronus_widget/: CMakeLists.txt  clock.c  widget.c
docs/: index.html
enclosure/: BackCover.3mf  DisplayFixtureLeft.3mf  Enclosure.3mf  FrontGlass.nc
enclosure/plastic/: CronusPlastic.f3d
enclosure/plywood/: FrontGlass.nc  (+2 more)
firmware/: .gitignore  README.md  sdkconfig
fw-ui/: package-lock.json  package.json
main/: CMakeLists.txt  Kconfig  display.c  get-certs.sh  main.c  main.h
main/include/cronus/: display.h  main.h
schematic/: Cronus.kicad_pcb  Cronus.kicad_prl  Cronus.kicad_pro  Cronus.kicad_sch  Cronus.kicad_sym  fp-lib-table  genpcb.sh  pcb2gcode.ini  splitdrill.py  sym-lib-table
src/: .gitignore  CMakeLists.txt  get-certs.sh  sdkconfig  sdkconfig.esp32s3_max7219v32x16  sdkconfig.esp32s3_ws2812v32x16
src/main/: CMakeLists.txt  Kconfig  air_raid.c  brightness.c  bt.c  cfg.c  main.c  weather.c  widget.c
src/main/icon/: README.md
src/main/icon/color/: cloudy.c  partly_cloudy_day.c  partly_cloudy_night.c
src/main/icon/mono/: cloudy.c  partly_cloudy_day.c  partly_cloudy_night.c
src/main/icon/universal/: alert.c  clear_day.c  clear_night.c  heavy_rain.c  heavy_snow.c  hourglass.c  light_rain.c  light_snow.c  medium_rain.c  medium_snow.c  mist.c  ok.c  question.c  thunderstorm.c
src/main/include/cronus/: air_raid.h  brightness.h  bt.h  cfg.h  display.h  icon.h  screen.h  weather.h
src/main/include/cronus/icon/color/: cloudy.h  partly_cloudy_day.h  partly_cloudy_night.h
src/main/include/cronus/icon/colorful/: clear_day.h  clear_night.h  cloudy.h  heavy_rain.h  light_rain.h  medium_rain.h  mist.h  partly_cloudy_day.h  partly_cloudy_night.h  question.h
src/main/include/cronus/icon/mono/: cloudy.h  partly_cloudy_day.h  partly_cloudy_night.h
src/main/include/cronus/icon/monochrome/: clear_day.h  clear_night.h  heavy_rain.h  light_rain.h  medium_rain.h  question.h
src/main/include/cronus/icon/universal/: clear_day.h  clear_night.h  heavy_rain.h  light_rain.h  medium_rain.h  mist.h  question.h
src/main/screen/: screen.c  screen_32x16.c
(+172 files in other folders)
